Another big update, mostly small improvements. Added parser support for ignoring erroneous semicolons after last declaration/statement. Added beginning of typechecking.

--- a/MiniLAX.cabal
+++ b/MiniLAX.cabal
@@ -17,23 +17,28 @@ executable mlax
   ghc-options:     -Wall
   other-modules:   
                    MiniLAX.AST,
+                   MiniLAX.AST.Annotated,
+                   MiniLAX.AST.PrettyPrint,
+                   MiniLAX.AST.Util,
+                   MiniLAX.Backend.JVM.CodeGen,
+                   MiniLAX.Backend.JVM.Skeleton,
+                   MiniLAX.Compiler,
+                   MiniLAX.Diagnostic,
+                   MiniLAX.IR,
                    MiniLAX.Location,
                    MiniLAX.Options,
-                   MiniLAX.Printer,
-                   MiniLAX.Backend.JVM.Skeleton,
-                   MiniLAX.Diagnostic,
-                   MiniLAX.Static.Symbols,
-                   MiniLAX.Static.Types,
-                   MiniLAX.Compiler,
+                   MiniLAX.Parsing.Lexer,
                    MiniLAX.Parsing.LexerCore,
+                   MiniLAX.Parsing.Parser2,
                    MiniLAX.Parsing.ParserCore,
-                   MiniLAX.AST.Util,
-                   MiniLAX.IR,
-                   MiniLAX.Backend.JVM.CodeGen,
-                   MiniLAX.Static.Closures,
-                   MiniLAX.Static.Resolver,
+                   MiniLAX.Printer,
                    MiniLAX.Static,
-                   MiniLAX.Static.Env
+                   MiniLAX.Static.Closures,
+                   MiniLAX.Static.Env,
+                   MiniLAX.Static.Resolver,
+                   MiniLAX.Static.Symbols,
+                   MiniLAX.Static.TypeCheck,
+                   MiniLAX.Static.Types
 
 test-suite Test
   type:            exitcode-stdio-1.0
@@ -47,25 +52,31 @@ test-suite Test
                    transformers,
                    dlist
   other-modules:   
-                  MiniLAX.Parsing.LexerTest,
                   MiniLAX.AST,
+                  MiniLAX.AST.Annotated,
+                  MiniLAX.AST.PrettyPrint,
+                  MiniLAX.AST.Util,
+                  MiniLAX.Backend.JVM.CodeGen,
+                  MiniLAX.Backend.JVM.Skeleton,
+                  MiniLAX.Compiler,
+                  MiniLAX.Diagnostic,
+                  MiniLAX.IR,
                   MiniLAX.Location,
                   MiniLAX.Options,
-                  MiniLAX.Printer,
-                  MiniLAX.Backend.JVM.Skeleton,
-                  MiniLAX.Diagnostic,
-                  MiniLAX.Static.Symbols,
-                  MiniLAX.Static.Types,
-                  MiniLAX.Compiler,
+                  MiniLAX.Parsing.Lexer,
                   MiniLAX.Parsing.LexerCore,
+                  MiniLAX.Parsing.LexerTest,
+                  MiniLAX.Parsing.Parser2,
                   MiniLAX.Parsing.ParserCore,
-                  MiniLAX.AST.Util,
-                  MiniLAX.IR,
-                  MiniLAX.Backend.JVM.CodeGen,
-                  MiniLAX.Static.Resolver,
-                  MiniLAX.Static.ClosuresTest,
+                  MiniLAX.Printer,
                   MiniLAX.Static,
-                  MiniLAX.Static.Env
+                  MiniLAX.Static.Closures,
+                  MiniLAX.Static.ClosuresTest,
+                  MiniLAX.Static.Env,
+                  MiniLAX.Static.Resolver,
+                  MiniLAX.Static.Symbols,
+                  MiniLAX.Static.TypeCheck,
+                  MiniLAX.Static.Types
   hs-source-dirs:  
                   tests,
                   src
