--- a/MiniLAX.cabal
+++ b/MiniLAX.cabal
@@ -41,7 +41,8 @@ executable mlax
                    MiniLAX.Static.TypeCheck,
                    MiniLAX.Static.Types,
                    MiniLAX.AST.Expr,
-                   MiniLAX.Util.LabelGen
+                   MiniLAX.Util.LabelGen,
+                   MiniLAX.IR.Generate
 
 test-suite Test
   type:            exitcode-stdio-1.0
@@ -81,7 +82,8 @@ test-suite Test
                   MiniLAX.Static.TypeCheck,
                   MiniLAX.Static.Types,
                   MiniLAX.AST.Expr,
-                  MiniLAX.Util.LabelGen
+                  MiniLAX.Util.LabelGen,
+                  MiniLAX.IR.Generate
   hs-source-dirs:  
                   tests,
                   src
