--- a/MiniLAX.cabal
+++ b/MiniLAX.cabal
@@ -36,13 +36,13 @@ executable mlax
                    MiniLAX.Static,
                    MiniLAX.Static.Closures,
                    MiniLAX.Static.Env,
-                   MiniLAX.Static.Resolver,
                    MiniLAX.Static.Symbols,
                    MiniLAX.Static.TypeCheck,
                    MiniLAX.Static.Types,
-                   MiniLAX.AST.Expr,
                    MiniLAX.Util.LabelGen,
-                   MiniLAX.IR.Generate
+                   MiniLAX.IR.Generate,
+                   MiniLAX.Util.AttrMap,
+                   MiniLAX.Util.Flag
 
 test-suite Test
   type:            exitcode-stdio-1.0
@@ -77,13 +77,13 @@ test-suite Test
                   MiniLAX.Static.Closures,
                   MiniLAX.Static.ClosuresTest,
                   MiniLAX.Static.Env,
-                  MiniLAX.Static.Resolver,
                   MiniLAX.Static.Symbols,
                   MiniLAX.Static.TypeCheck,
                   MiniLAX.Static.Types,
-                  MiniLAX.AST.Expr,
                   MiniLAX.Util.LabelGen,
-                  MiniLAX.IR.Generate
+                  MiniLAX.IR.Generate,
+                  MiniLAX.Util.AttrMap,
+                  MiniLAX.Util.Flag
   hs-source-dirs:  
                   tests,
                   src
